--- a/defaults.tex
+++ b/defaults.tex
@@ -5,7 +5,7 @@
 \faculty{Instituto Politécnico de Lisboa}
 
 % University's logo
-\universitylogo{logo_iselnew}
+\universitylogo{isellogo}
 
 % Front Image
 % If there is no image then comment the following command with %
@@ -13,6 +13,16 @@
 
 % Scientific Area 
 \majorfield{Engenharia Informática e de Computadores}
+
+% Thesis type: Dissertion or Final Project
+\thesistype{[Dissertação | Projecto Final]}
+
+%% only for Report document
+% course
+\coursefield{Projecto e Seminário}
+
+% scholar year
+\scholaryear{2016-2017}
 
 % Department
 \department{Área Departamental de Engenharia de Electrónica e Telecomunicações e de Computadores}
