--- a/personaldataofthesis.tex
+++ b/personaldataofthesis.tex
@@ -2,8 +2,12 @@
 \title{[Título da dissertação, do Projecto ou do Relatório de Estágio]}
 
 %% Author
-\author[f]{\uppercase{[Nome completo do autor]}}
-\authordegree{(Grau do candidato)}
+% gender: f for women or m for men and name
+\author[f]{\uppercase{[Nome completo do primeiro autor]}}
+\author[f]{\uppercase{[Nome completo do segundo autor]}}
+
+%% remove text inside { } for report document
+\authordegree{} % (Grau do candidato)
 
 %% Date
 \themonth{MÊS}
@@ -12,7 +16,7 @@
 %% Supervisors (maximum of 2)
 % use [f] for female and [m] for male
 \adviser[m]{[Nome do orientador]}{[Grau]}
-\adviser[m]{[Nome do orientador]}{[Grau]}
+\adviser[f]{[Nome do orientador]}{[Grau]}
 
 %
 %% Jury (maximum of 5 elements)
